tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__BoundArmor-AAAAAAAAAAAAAAAAAAABrw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 431,
  "prerequisites": [
    429
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Time to assemble your armor. You need to build the pattern with blocks as you would craft the armor in a crafting table. The soul forge must connect to the structure on at least 2 sides. Then, right-click the forge block with an empty hand to craft the armor piece.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bound Armor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    429
  ],
  "rewards": [],
  "tasks": []
}
