tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__BoundToolsPickax-AAAAAAAAAAAAAAAAAAABsg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 434,
  "prerequisites": [
    433
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mining never was easier. Just right-click with this tool and all the stone is gone! Like all bound tools, this uses a massive amount of LP.\n\n[note]Watch out for falling into lava![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bound Tools: Pickaxe",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    433
  ],
  "rewards": [],
  "tasks": []
}
