tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__Convocationofthe-AAAAAAAAAAAAAAAAAAACyg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 714,
  "prerequisites": [
    707,
    710
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Time to open a portal to the Demonic Realm. What could possibly go wrong? (It's recommended to do this ritual in a space dimension, as the demon city spreads up to 1000x1000 blocks)\n\n[note]You should also be starting the ritual from the ground rather than in the air for the best results![/note]\n\nRequirements:\n- 15M LP (Archmage Blood Orb and >= 13 Runes of the Orb)\n- 8 Crystal Belljars (one filled with each of: magicales, potentia, incendium, terrae, tenebrae, sanctus, aether, and aquasalus)\n- 1 Sacrifice (Bottle a lesser demon/elemental in a soul vial)\n- 1 Master Ritual Stone, 128 Ritual Stones, and 1 Blood Altar\n- 1 Awakened Activation Crystal\n\nSteps to the Ritual:\n1. Use a Ritual Diviner to place all the Ritual Stones.\n2. Place the Belljars atop the 8 pillars surrounding the center.\n3. Link the Belljars to the Master Ritual Stone.\n4. Place the Blood Altar on top of the Master Ritual Stone.\n5. Start the ritual with the Awakened Activation Crystal.\n6. The Belljars are drained of their reagents.\n7. Kill the lesser demon/elemental with a Dagger of Sacrifice.\n8. The Demon Portal is opened.\n\nFor more details and images, visit [url]https://wiki.gtnewhorizons.com/wiki/Convocation_of_the_Damned[/url]\n\n[warn]The OW is now blacklisted for the portal. Too many people did not follow the recommendation and servers suffered for it. It also does not work well in the Personal Dimension.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Convocation of the Damned",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    707,
    710
  ],
  "rewards": [],
  "tasks": []
}
